fixed overflow text

--- a/frontend/src/app/shared/components/menu/menu.component.css
+++ b/frontend/src/app/shared/components/menu/menu.component.css
@@ -15,3 +15,10 @@
 .menu {
   user-select: none;
 }
+
+.sbom-view {
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
+  width: 95%;
+}
